[tool.poetry]
name = "spotify-playlist"
version = "0.1.0"
description = ""
authors = ["Dragonlord1005 <68302450+Dragonlord1005@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "spotify_playlist"}]

[tool.poetry.dependencies]
python = "^3.10"
spotipy = "^2.22.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
